finish min dev version

--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -4,10 +4,6 @@
     padding: 0 15px;
   }
 
-  &__list {
-
-  }
-
   &__item {
     max-width: 400px;
 
@@ -23,7 +19,36 @@
   }
 
   &__info {
+    display: flex;
+    flex-direction: column;
+
+
     margin-bottom: 20px;
+  }
+
+  &__add-form {
+    max-width: 400px;
+
+    border: 1px solid rgba(0,0,0, 0.5);
+
+    margin-top: 10px;
+    padding: 10px;
+
+    .inputs-block {
+      margin-bottom: 10px;
+    }
+  }
+
+  &__edit-form {
+    margin-top: 10px;
+
+    padding-top: 10px;
+
+    border-top: 1px solid rgba(0,0,0, 0.2);
+
+    .inputs-block {
+      margin-bottom: 10px;
+    }
   }
 
   &__actions {
